--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Treehouse.FitnessFrog.Models.Entry
+@using Treehouse.FitnessFrog.Models
 
 @{
     ViewBag.Title = "Add Entry";
@@ -20,7 +21,8 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.ActivityId, new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.ActivityId,
+               (SelectList)ViewBag.ActivitiesSelectListItems, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
@@ -30,7 +32,21 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Intensity, new { @class = "form-control" })
+                <div>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                            Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
+                    </label>
+
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                            Entry.IntensityLevel.Medium) @Entry.IntensityLevel.Medium
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity,
+                            Entry.IntensityLevel.High) @Entry.IntensityLevel.High
+                    </label>
+                </div>
             </div>
 
             <div class="form-group">
